# AI-Chatbot

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md
.github/workflows/: deploy-frontend.yml  test-backend.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/agents/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
backend/app/api/: admin.py  chat.py  documents.py  health.py  sessions.py
backend/app/core/: errors.py  logging.py  paths.py
backend/app/llm/: __init__.py  base.py  factory.py  minimax.py
backend/app/models/: db.py  schemas.py
backend/app/services/: chunking.py  embedding.py  ingestion.py  llm_cache.py  persist.py  reranker.py  vector_store.py
backend/app/services/parsers/: __init__.py  base_parser.py  docling_parser.py  markdown_parser.py  marker_parser.py  simple_parser.py
backend/app/streaming/: events.py  sse.py
backend/tests/eval/: _fixtures.py  test_quality_gate.py  test_ragas.py
backend/tests/unit/: smoke_phase1.py  smoke_phase2.py  smoke_phase3.py
docs/: architecture.md  deployment.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  env.ts  main.tsx  router.tsx  types.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/hooks/: useChatStream.ts  useDocuments.ts  useSessions.ts
scripts/: deploy-backend-fix.sh  deploy-now.sh  deploy-to-hf-space.sh  deploy-via-api.py  push-single-file.py
(+31 files in other folders)
